--- a/CoinbasePro.Application/CoinbasePro.Application.csproj
+++ b/CoinbasePro.Application/CoinbasePro.Application.csproj
@@ -7,20 +7,17 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
-    <PackageReference Include="EFCore.BulkExtensions" Version="2.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.2">
+    <PackageReference Include="EFCore.BulkExtensions" Version="2.4.3" />
+    <PackageReference Include="GDAX.Api.ClientLibrary" Version="1.0.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\GitHub\coinbasepro-csharp\CoinbasePro\CoinbasePro.csproj" />
-    <ProjectReference Include="..\..\TA4N\TA4N\TA4N.csproj" />
+    <PackageReference Include="TA4N" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
