--- a/CoinbasePro.Application/CoinbasePro.Application.csproj
+++ b/CoinbasePro.Application/CoinbasePro.Application.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="2.4.3" />
     <PackageReference Include="GDAX.Api.ClientLibrary" Version="1.0.27" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.3">
@@ -17,7 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="TA4N" Version="1.0.2" />
+    <PackageReference Include="TA4N" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
