Re-organise for examples to be in seperate folder correct pathing bug to csv files

--- a/Examples/CoinbasePro.ConsoleExample/CoinbasePro.ConsoleExample.csproj
+++ b/Examples/CoinbasePro.ConsoleExample/CoinbasePro.ConsoleExample.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoinbasePro.Application\CoinbasePro.Application.csproj" />
+    <ProjectReference Include="..\..\CoinbasePro.Application\CoinbasePro.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
