--- a/Examples/CoinbasePro.ConsoleExample/appsettings.json
+++ b/Examples/CoinbasePro.ConsoleExample/appsettings.json
@@ -1,6 +1,7 @@
 {
   // 
-  "csvPath": "../../../csv-data/",
+  "HasOverlayFastUpdate":  "true", //hack flag to force fast collection of candles while bulk of code is still outside github 
+  "csvPath": "../../../../csv-data/",
   "apiKey":  "",
   "apiSecret":  "",
   "passPhrase":  "",
