Solution to VS2019 Add git submodule to pickup changes made to the REST API Add Test project, using Moq / NUnit

--- a/Examples/CoinbasePro.ConsoleExample/appsettings.json
+++ b/Examples/CoinbasePro.ConsoleExample/appsettings.json
@@ -1,15 +1,19 @@
 {
   // 
-  "HasOverlayFastUpdate":  "true", //hack flag to force fast collection of candles while bulk of code is still outside github 
+  "HasOverlayFastUpdate": "true", //hack flag to force fast collection of candles while bulk of code is still outside github
   "csvPath": "../../../../csv-data/",
-  "apiKey":  "",
-  "apiSecret":  "",
-  "passPhrase":  "",
+
+  // best to populate these values into an appsettings.Development.json file, 
+  // so there is no risk of values getting committed into github
+  "apiKey": "",
+  "apiSecret": "",
+  "passPhrase": ""
 
   /*
   // in ASPNETCORE site this value is in the launchSettings.json file
   "ASPNETCORE_HOSTINGSTARTUP__KEYVAULT__CONFIGURATIONVAULT": "", 
-  // populate with the Azure values, or remove and add the values directly to apiKey / apiSecret / passPhrase below
+  // populate with the Azure values, or add the values directly to 
+  // apiKey / apiSecret / passPhrase above
   "AzureAd": {
     "Instance": "",
     "Domain": "",
