--- a/CoinbasePro.Application/CoinbasePro.Application.csproj
+++ b/CoinbasePro.Application/CoinbasePro.Application.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
     <PackageReference Include="EFCore.BulkExtensions" Version="2.4.3" />
-    <PackageReference Include="GDAX.Api.ClientLibrary" Version="1.0.27" />
+    <PackageReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
@@ -24,6 +24,10 @@
 
   <ItemGroup>
     <Folder Include="HostedServices\Order\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\gdax-csharp\CoinbasePro\CoinbasePro.csproj" />
   </ItemGroup>
 
 </Project>
