--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,9 @@ init:
         Update-AppveyorBuild -Version "dev-$($env:APPVEYOR_REPO_COMMIT.substring(0,7))"
       }
 
+install:
+    git submodule update --init --recursive
+
 before_build:
 - ps: >-
     nuget.exe restore CoinbasePro.Application.sln
